# remoteDesktop

./: .gitignore  README.md  TODO.txt  bundleLinux.sh  remakeall.sh  server.conf
client/: CMakeLists.txt  Makefile  build.sh
client/src/: main.cpp
client/src/HttpClient/: HttpClient.cpp  HttpClient.hpp
client/src/MjpegClient/: MjpegClient.cpp  MjpegClient.hpp
client/src/TcpClient/: TcpClient.cpp  TcpClient.hpp
include/: Colors.hpp  DataTypes.hpp  Macros.hpp
server/: CMakeLists.txt  Makefile  build.sh  cleanCloudflarestuff.sh  config.yml  editConf.sh  server.conf
server/src/: main.cpp
server/src/CloudflaredTunnel/: CloudflaredTunnel.cpp  CloudflaredTunnel.hpp
server/src/Config/: ConfigFileParser.cpp  ConfigFileParser.hpp
server/src/Network/: Network.cpp  Network.hpp
server/src/Screenshot/: Screenshot.cpp  Screenshot.hpp
tools/: DebugStatement.hpp  ErrorWarning.hpp
